@@ -1,57 +1,83 @@
 package org.utbot.instrumentation.process
 
+import mu.KotlinLogging
 import org.utbot.common.bracket
 import org.utbot.common.debug
 import org.utbot.common.firstOrNullResourceIS
 import org.utbot.common.getCurrentProcessId
-import org.utbot.common.packageName
 import org.utbot.common.pid
 import org.utbot.common.scanForResourcesContaining
 import org.utbot.common.utBotTempDirectory
-import org.utbot.framework.JdkPathService
+import org.utbot.framework.plugin.services.JdkInfoService
+import org.utbot.framework.UtSettings
+import org.utbot.framework.plugin.services.WorkingDirService
 import org.utbot.instrumentation.Settings
 import org.utbot.instrumentation.agent.DynamicClassTransformer
 import java.io.File
-import java.nio.file.Paths
-import mu.KotlinLogging
 
 private val logger = KotlinLogging.logger {}
 private var processSeqN = 0
 
 class ChildProcessRunner {
     private val cmds: List<String> by lazy {
-        val debugCmd = if (Settings.runChildProcessWithDebug) {
-            listOf(DEBUG_RUN_CMD)
-        } else {
-            emptyList()
-        }
+        val debugCmd =
+            listOfNotNull(DEBUG_RUN_CMD.takeIf { Settings.runChildProcessWithDebug} )
 
-        listOf(Paths.get(JdkPathService.jdkPath.toString(),"bin", "java").toString()) +
-                debugCmd + listOf("-javaagent:$jarFile", "-ea", "-jar", "$jarFile")
+        val javaVersionSpecificArguments =
+            listOf("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED", "--illegal-access=warn")
+                .takeIf { JdkInfoService.provide().version > 8 }
+                ?: emptyList()
+
+        val pathToJava = JdkInfoService.provide().path
+
+        listOf(pathToJava.resolve("bin${File.separatorChar}java").toString()) +
+            debugCmd +
+            javaVersionSpecificArguments +
+            listOf("-javaagent:$jarFile", "-ea", "-jar", "$jarFile")
     }
 
-    lateinit var errorLogFile: File
+    var errorLogFile: File = NULL_FILE
 
     fun start(): Process {
         logger.debug { "Starting child process: ${cmds.joinToString(" ")}" }
         processSeqN++
 
-        val dir = File(utBotTempDirectory.toFile(), ERRORS_FILE_PREFIX)
-        dir.mkdirs()
-        errorLogFile = File(dir, "${hashCode()}-${processSeqN}.log")
+        if (UtSettings.logConcreteExecutionErrors) {
+            UT_BOT_TEMP_DIR.mkdirs()
+            errorLogFile = File(UT_BOT_TEMP_DIR, "${hashCode()}-${processSeqN}.log")
+        }
 
-        val processBuilder = ProcessBuilder(cmds).redirectError(errorLogFile)
+        val directory = WorkingDirService.provide().toFile()
+
+        val processBuilder = ProcessBuilder(cmds)
+            .redirectError(errorLogFile)
+            .directory(directory)
+
         return processBuilder.start().also {
-            logger.debug { "Process started with PID=${it.pid} , error log: ${errorLogFile.absolutePath}" }
+            logger.debug { "Process started with PID=${it.pid}" }
+
+            if (UtSettings.logConcreteExecutionErrors) {
+                logger.debug { "Child process error log: ${errorLogFile.absolutePath}" }
+            }
         }
     }
 
     companion object {
         private const val UTBOT_INSTRUMENTATION = "utbot-instrumentation"
         private const val ERRORS_FILE_PREFIX = "utbot-childprocess-errors"
-        private const val INSTRUMENTATION_LIB = "instrumentation-lib"
+        private const val INSTRUMENTATION_LIB = "lib"
 
         private const val DEBUG_RUN_CMD = "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,quiet=y,address=5005"
+
+        private val UT_BOT_TEMP_DIR: File = File(utBotTempDirectory.toFile(), ERRORS_FILE_PREFIX)
+
+        private val NULL_FILE_PATH: String = if (System.getProperty("os.name").startsWith("Windows")) {
+            "NUL"
+        } else {
+            "/dev/null"
+        }
+
+        private val NULL_FILE = File(NULL_FILE_PATH)
 
         /**
          * * Firstly, searches for utbot-instrumentation jar in the classpath.
